--- a/deploy/crds/aws_v1alpha1_accountclaim_1_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_accountclaim_1_cr.yaml
@@ -1,14 +1,14 @@
 apiVersion: aws.managed.openshift.io/v1alpha1
 kind: AccountClaim
 metadata:
-  name: corp-org-accountclaim
+  name: corp1-org-accountclaim
 spec:
   legalEntity:
-    name: corp-org
-    id: 123456
+    name: corp1-org
+    id: 111111
   awsCredentialSecret:
     name: iam-credentials
-    namespace: corp-org-ns
+    namespace: corp1-org-ns
   aws:
     regions:
     - name: us-east-1
