--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -1,11 +1,13 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: aws-account-operator
 subjects:
 - kind: ServiceAccount
   name: aws-account-operator
+  # Replace this with the namespace the operator is deployed in.
+  namespace: REPLACE_NAMESPACE
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: aws-account-operator
   apiGroup: rbac.authorization.k8s.io
