Fixed mismatch between json and golang field names. Regererate CRDs after fix

--- a/deploy/crds/aws_v1alpha1_account_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_account_crd.yaml
@@ -42,20 +42,20 @@ spec:
           type: object
         spec:
           properties:
-            awsaccountid:
+            awsAccountID:
               description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
                 Important: Run "operator-sdk generate k8s" to regenerate code after
                 modifying this file Add custom validation using kubebuilder tags:
                 https://book.kubebuilder.io/beyond_basics/generating_crd.html'
               type: string
-            claimlink:
+            claimLink:
               type: string
-            iamusersecret:
+            iamUserSecret:
               type: string
           required:
-          - awsaccountid
-          - iamusersecret
-          - claimlink
+          - awsAccountID
+          - iamUserSecret
+          - claimLink
           type: object
         status:
           properties:
