--- a/deploy/crds/aws_v1alpha1_accountpool_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_accountpool_crd.yaml
@@ -39,31 +39,31 @@ spec:
           type: object
         spec:
           properties:
-            poolsize:
+            poolSize:
               format: int64
               type: integer
           required:
-          - poolsize
+          - poolSize
           type: object
         status:
           properties:
-            claimedaccounts:
+            claimedAccounts:
               format: int64
               type: integer
-            poolsize:
+            poolSize:
               description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                 of cluster Important: Run "operator-sdk generate k8s" to regenerate
                 code after modifying this file Add custom validation using kubebuilder
                 tags: https://book.kubebuilder.io/beyond_basics/generating_crd.html'
               format: int64
               type: integer
-            unclaimedaccounts:
+            unclaimedAccounts:
               format: int64
               type: integer
           required:
-          - poolsize
-          - unclaimedaccounts
-          - claimedaccounts
+          - poolSize
+          - unclaimedAccounts
+          - claimedAccounts
           type: object
   version: v1alpha1
   versions:
