--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -16,7 +16,8 @@ spec:
       containers:
         - name: aws-account-operator
           # Replace this with the built image name
-          image: REPLACE_IMAGE
+          # This will get replaced on deploy by /hack/generate-operator-bundle.py
+          image: quay.io/app-sre/aws-account-operator:latest
           command:
           - aws-account-operator
           imagePullPolicy: Always
