--- a/deploy/uhc_service_account.yaml
+++ b/deploy/uhc_service_account.yaml
@@ -1,5 +1,5 @@
-- apiVersion: v1
-  kind: ServiceAccount
-  metadata:
-    name: aws-account-operator-client
-    namespace: aws-account-operator-client # This namespace needs to be created in advance.
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: aws-account-operator-client
+  namespace: aws-account-operator-client # This namespace needs to be created in advance.
