SREP-1602: Update AccountClaim legalEntity.id to string

--- a/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
@@ -72,8 +72,7 @@ spec:
                 https://book.kubebuilder.io/beyond_basics/generating_crd.html'
               properties:
                 id:
-                  format: int64
-                  type: integer
+                  type: string
                 name:
                   type: string
               required:
