SREP-1593 Updated deploy yamls with more friendly names/ids

--- a/deploy/crds/aws_v1alpha1_accountclaim_6_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_accountclaim_6_cr.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: corp-org-ns
 spec:
   legalEntity:
-    name: Red Hat OpenShift Online
-    id: 2HELaFOf2YHWwwvt3XMbT5Mja7M
+    name: Corp-2
+    id: 789xyz
   awsCredentialSecret:
     name: iam-credentials
     namespace: corp-org-ns
