--- a/deploy/crds/aws_v1alpha1_accountclaim_5_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_accountclaim_5_cr.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: corp-org-ns
 spec:
   legalEntity:
-    name: Red Hat OpenShift Online
-    id: 1HELaFOf2YHWwwvt3XMbT5Mja7M
+    name: Corp-1
+    id: 1234abc
   awsCredentialSecret:
     name: iam-credentials
     namespace: corp-org-ns
