Fix CRD so that the account name is shown in `oc get accountclaim --all-namespaces`

--- a/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_accountclaim_crd.yaml
@@ -7,7 +7,7 @@ spec:
   - JSONPath: .status.state
     name: State
     type: string
-  - JSONPath: .spec.accountlink
+  - JSONPath: .spec.accountLink
     name: Account
     type: string
   - JSONPath: .metadata.creationTimestamp
