--- a/deploy/crds/aws_v1alpha1_account_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_account_crd.yaml
@@ -82,7 +82,7 @@ spec:
                     description: LastProbeTime is the last time we probed the condition.
                     format: date-time
                     type: string
-                  lastTransitioNTime:
+                  lastTransitionTime:
                     description: LastTransitionTime is the laste time the condition
                       transitioned from one status to another.
                     format: date-time
