--- a/deploy/crds/aws_v1alpha1_accountpool_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_accountpool_crd.yaml
@@ -20,6 +20,8 @@ spec:
     plural: accountpools
     singular: accountpool
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       properties:
