--- a/deploy/crds/aws_v1alpha1_account_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_account_crd.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: accounts.aws.managed.openshift.io
-                       alsdkjfa;lsdkjfas;ldkj alsdkjfasl;kdjfasd;
+                       salsdkjfa;lsdkjfas;ldkj alsdkjfasl;kdjfasd;
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.state
