--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_crd.yaml
@@ -50,7 +50,7 @@ spec:
                         required:
                         - AWS
                         type: object
-                      resourcce:
+                      resource:
                         items:
                           type: string
                         type: array
@@ -81,10 +81,42 @@ spec:
           type: object
         status:
           properties:
+            conditions:
+              items:
+                properties:
+                  lastProbeTime:
+                    description: LastProbeTime is the last time we probed the condition.
+                    format: date-time
+                    type: string
+                  lastTransitionTime:
+                    description: LastTransitionTime is the laste time the condition
+                      transitioned from one status to another.
+                    format: date-time
+                    type: string
+                  message:
+                    description: Message is a human-readable message indicating details
+                      about last transition.
+                    type: string
+                  reason:
+                    description: Reason is a unique, one-word, CamelCase reason for
+                      the condition's last transition.
+                    type: string
+                  status:
+                    description: Status is the status of the condition
+                    type: string
+                  type:
+                    description: Type is the type of the condition.
+                    type: string
+                required:
+                - type
+                - status
+                type: object
+              type: array
             state:
               type: string
           required:
           - state
+          - conditions
           type: object
   version: v1alpha1
   versions:
