AWSFederatedRole CR Typo fix

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_customeradmin_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_customeradmin_cr.yaml
@@ -34,7 +34,8 @@ spec:
           - "ec2:CreateRoute"
           - "support:*"
           - "directconnect:*"
-        resource: "*"
+        resource: 
+          - "*"
       # - effect: deny 
       #   action: []
       #   resources: '“*”'
