--- a/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_crd.yaml
@@ -36,29 +36,20 @@ spec:
           type: object
         spec:
           properties:
-            awsCredentialSecret:
-              description: AwsCredentialSecret holds the credentials to the cluster
-                account where the role wil be created
-              properties:
-                name:
-                  type: string
-                namespace:
-                  type: string
-              required:
-              - name
-              - namespace
-              type: object
+            accountReference:
+              description: AccountReference holds the name of the associated Account
+                CR to use
+              type: string
             awsFederatedRoleName:
               description: FederatedRoleName must be the name of a federatedrole cr
                 that currently exists
               type: string
             customerAccountID:
-              description: CustomerAccountID holds the account number associated with
-                the AWS account that will be used to access the associated role
+              description: CustomerAccountID holds the external AWS account ID
               type: string
           required:
           - customerAccountID
-          - awsCredentialSecret
+          - accountReference
           - awsFederatedRoleName
           type: object
         status:
