--- a/deploy/crds/aws_v1alpha1_account_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_account_crd.yaml
@@ -52,6 +52,8 @@ spec:
               type: boolean
             claimLink:
               type: string
+            claimLinkNamespace:
+              type: string
             iamUserSecret:
               type: string
             legalEntity:
@@ -69,6 +71,7 @@ spec:
           - awsAccountID
           - iamUserSecret
           - claimLink
+          - claimLinkNamespace
           - legalEntity
           type: object
         status:
