--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_crd.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_crd.yaml
@@ -4,12 +4,14 @@ metadata:
   name: awsfederatedroles.aws.managed.openshift.io
 spec:
   additionalPrinterColumns:
-    - JSONPath: .status.state
-      name: State
-      type: string
-    - JSONPath: .metadata.creationTimestamp
-      name: Age
-      type: date
+  - JSONPath: .status.state
+    description: Status the federated role
+    name: State
+    type: string
+  - JSONPath: .metadata.creationTimestamp
+    description: Age since federated role was created
+    name: Age
+    type: date
   group: aws.managed.openshift.io
   names:
     kind: AWSFederatedRole
