Modify FederatedAccountAccess CR

--- a/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_cr.yaml
@@ -3,6 +3,6 @@ kind: AWSFederatedAccountAccess
 metadata:
   name: clustername.customeraccountname.rolename
 spec:
-  AccountReference: accountreference
-  ExternalCustomerAWSAccountID: externalcustomerawsaccountid
+  accountReference: accountreference
+  externalCustomerAWSIAMARN: externalCustomerAWSIAMARN
   awsFederatedRoleName: awsfederatedrolename
