--- a/deploy/cluster_role.yaml
+++ b/deploy/cluster_role.yaml
@@ -45,6 +45,8 @@ rules:
   - accountclaims
   - accounts
   - accountpools
+  - awsfederatedaccountaccesses
+  - awsfederatedroles
   verbs:
   - '*'
 - apiGroups:
