--- a/deploy/uhc_cluster_role_binding.yaml
+++ b/deploy/uhc_cluster_role_binding.yaml
@@ -6,6 +6,8 @@ subjects:
 - kind: ServiceAccount
   namespace: aws-account-operator-client
   name: aws-account-operator-client
+- kind: Group
+  name: aws-account-operator-client
 roleRef:
   kind: ClusterRole
   name: aws-account-operator-client
