--- a/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedaccountaccess_cr.yaml
@@ -4,5 +4,7 @@ metadata:
   name: clustername.customeraccountname.rolename
 spec:
   accountReference: accountreference
-  externalCustomerAWSIAMARN: externalCustomerAWSIAMARN
+  awsCredentialSecret:
+      name: secretName
+      namespace: secretNamespace
   awsFederatedRoleName: awsfederatedrolename
