Update example CRs

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_readonly_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_readonly_cr.yaml
@@ -2,6 +2,7 @@ apiVersion: aws.managed.openshift.io/v1alpha1
 kind: AWSFederatedRole
 metadata:
   name: read-only
+  namespace: aws-account-operator
 spec:
   roleDescription: This is the description of read-only
   # Custom Policy definition
