Revert "Rotate credentials by accounts that are in Ready state"

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ Session.vim
 tags
 ### VisualStudioCode ###
 .vscode/*
+### Goland ###
 .idea/*
 .history
 # End of https://www.gitignore.io/api/go,vim,emacs,visualstudiocode
