Update Federated Role CRs to include roleDisplayName

--- a/deploy/crds/aws_v1alpha1_awsfederatedrole_customeradmin_cr.yaml
+++ b/deploy/crds/aws_v1alpha1_awsfederatedrole_customeradmin_cr.yaml
@@ -2,7 +2,9 @@ apiVersion: aws.managed.openshift.io/v1alpha1
 kind: AWSFederatedRole
 metadata:
   name: customer-admin
+  namespace: aws-account-operator
 spec:
+  roleDisplayName: customer-admin
   roleDescription: This is the description of customer-admin
   # Custom policy definition 
   awsCustomPolicy:
